<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard_navigation"
    app:startDestination="@+id/dashboard">
    <fragment
        android:id="@+id/dashboard"
        android:name="io.burnoutcrew.multinavhost.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_list">
        <deepLink app:uri="sample://dashboard/first/" />
    </fragment>
    <navigation
        android:id="@+id/navigation_dashboardSecondLevel"
        app:startDestination="@id/dashboardSecondLevel">
        <fragment
            android:id="@+id/dashboardSecondLevel"
            android:name="io.burnoutcrew.multinavhost.ui.dashboard.DashboardFragmentSecondLevelFragment"
            android:label="@string/title_dashboard_second_level"
            tools:layout="@layout/fragment_list">
            <deepLink app:uri="sample://dashboard/second/" />
        </fragment>

        <fragment
            android:id="@+id/dashboardThirdLevel"
            android:name="io.burnoutcrew.multinavhost.ui.dashboard.DashboardFragmentThirdLevelFragment"
            android:label="@string/title_dashboard_third_level"
            tools:layout="@layout/fragment_list">
            <deepLink app:uri="sample://dashboard/third/" />
        </fragment>
    </navigation>
</navigation>
